# ProtossPAKEBench

./: .gitignore  LICENSE  README.md
cpace-protoss-comparison/: README.md  plot_benchmark.py
cpace-protoss-comparison/dalek/: Cargo.toml
cpace-protoss-comparison/dalek/benchmark/: pake_comparison.rs
cpace-protoss-comparison/dalek/src/: lib.rs  logger.rs  main.rs  protoss_protocol.rs
cpace-protoss-comparison/libsodium-c/benchmark/: timing_benchmark.c
cpace-protoss-comparison/libsodium-c/src/: logger.c  logger.h  protoss_protocol.c  protoss_protocol.h
cpace-protoss-comparison/libsodium-cpp/src/: logger.hpp  main.cpp  protoss_protocol.cpp
cpace-protoss-comparison/libsodium/benchmark/: timing_benchmark.cpp
cpace-protoss-comparison/libsodium/src/: logger.cpp  protoss_protocol.hpp
dalek-rust/: Cargo.toml  README.md
dalek-rust/benchmark/: benchmark.rs
dalek-rust/src/: ec_operations.rs
libsodium-c/: README.md
libsodium-c/benchmark/: timing_benchmark.c  variant_benchmark.c
libsodium-c/src/: logger.c  main.c  protoss_common.c  protoss_common.h  protoss_orchestrated.c  protoss_orchestrated.h  protoss_precomputed.c  protoss_precomputed.h  protoss_protocol.c  protoss_validated.c  protoss_validated.h
libsodium-cpp/: README.md
libsodium-cpp/benchmark/: timing_benchmark.cpp
libsodium-cpp/src/: logger.cpp  main.cpp  protoss_protocol.cpp  protoss_protocol.hpp
python/: README.md
python/benchmark/: timing_benchmark.py
python/src/: __init__.py  logger.py  main.py  protoss_protocol.py  sodium_bindings.py
